Fixed funky left-align in the footer

--- a/style.css
+++ b/style.css
@@ -31,18 +31,19 @@ Tags: two-columns
 ----------------------------------------- */
 @import "css/font-awesome.css";
 
+body {
+    font-size: 12px;
+}
 .ece-header  {background-color: #262626; padding: 60px;	margin: -1.875rem 0 20px 0;}	/* this is the ECE logo header */
 
 .ece-footer {
 	background-color: #262626; 
 	color:#d7d7d7; 
 	padding: 30px 0px 0px 0px; 
-	font-size: 12px;
 }
 .ece-sponsor-footer {
 	background-color: #f5f5f5; 
 	padding: 10px 0px 10px 0px; 
-	font-size: 12px;
 }
 .ece-footer-icons {
 	font-size: 20px;
@@ -59,6 +60,15 @@ a.ece-footer-icons:hover{
 .h6footer {color:#ededed; text-transform:uppercase; font-weight:bold;}
 .h6postmetadata {color:#; text-transform:uppercase; font-size:70%; letter-spacing:1px;}
 .ece-small-text {font-size:12px;}
+
+/* THESE ARE CUSTOMIZATIONS MADE TO THE FOUNDATION CSS CLASSES. */
+.orbit-bullets{margin:0 auto 30px auto;overflow:hidden;position:relative;top:10px}
+.orbit-bullets li{display:block;width:10px;height:10px;background:#d7d7d7;float:left;margin-right:6px;border:solid 0px #262626;-webkit-border-radius:1000px;border-radius:1000px}
+.orbit-bullets li.active{background:#262626}
+
+
+
+
 
 /* -----------------------------------------
    Images
